tests/typing/errors/smt2_named/open_named.expected
File "tests/typing/errors/smt2_named/open_named.smt2", line 6, character 7-30:
6 |     (= (! (+ x y z) :named t ) t)
           ^^^^^^^^^^^^^^^^^^^^^^^
Error Named terms must be closed, but the following variables are free: z
